k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: fmp68
  labels:
    app: fmp68
    project: "fitness-path-tracker"
