k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: gateway-ingress
  namespace: fmp

spec:
  ingressClassName: nginx

  rules:
    - host: fmp.local

      http:
        paths:

          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 3000

          - path: /paths
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 3000

          - path: /follow-requests
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
